# rez-bootstrap

./: .gitignore  pyproject.toml
go/: config.go  github.go  go.mod  go.sum  interpreter.go  main.go
rust/: Cargo.toml
rust/src/: main.rs
src/rez_bootstrap/: _cli.py  _python.py  _types.py
