[package]
name = "rez-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.40"
zstd = "0.13.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
ureq = "2.9.6"
regex = { version = "1.10.4", features = ["std"] }
once_cell = "1.19.0"
url = "2.5.0"
urlencoding = "2.1.3"
