[package]
name = "rez-bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-compression = { version = "0.4.8", features = ["zstd", "tokio"] }
human-sort = "0.2.2"
futures = "0.3.30"
once_cell = "1.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
regex = { version = "1.10.4", features = ["std"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
tokio = { version = "1.37.0", features = ["macros", "rt"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
tokio-tar = "0.3.1"
url = "2.5.0"
urlencoding = "2.1.3"
